Overhaul JOL Samples