@@ -38,23 +38,25 @@ import static java.lang.System.out;
 /**
  * @author Aleksey Shipilev
  */
-public class JOLSample_12_ThinLocking {
+public class JOLSample_13_ThinLocking {
 
     /*
      * This is another dive into the mark word.
-     *
-     * Among other things, mark words store locking information.
-     * We can clearly see how the mark word contents change when
-     * we acquire the lock, and release it subsequently.
      *
      * This one is the example of thin (displaced) lock. The data
      * in mark word when lock is acquired is the reference to the
      * displaced object header, allocated on stack. Once we leave
      * the lock, the displaced header is discarded, and mark word
      * is reverted to the default value.
+     *
+     * This example relies on biased locking not biasing the object
+     * at the first lock acquisition. Since JDKs up to 8 have biased
+     * locking startup delay, this example works out of the box there.
+     * On modern JDKs, starting with 9, this example should be run
+     * with with -XX:-UseBiasedLocking.
      */
 
-    public static void main(String[] args) throws Exception {
+    public static void main(String[] args) {
         out.println(VM.current().details());
 
         final A a = new A();
